--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,11 @@ if !USE_SYSTEM_SHARED_LIB
 AM_CFLAGS += -I$(top_srcdir)/libbloom
 AM_CFLAGS += -I$(top_srcdir)/libipset/include
 AM_CFLAGS += -I$(top_srcdir)/libcork/include
+AM_CFLAGS += -I$(top_srcdir)/libudns
+AM_CFLAGS += -I$(top_srcdir)/libev
+AM_CFLAGS += -I$(top_srcdir)/libsodium/src/libsodium/include
+AM_CFLAGS += -I$(top_srcdir)/pcre
+AM_CFLAGS += -I$(top_srcdir)/mbedtls/include
 endif
 AM_CFLAGS += $(LIBPCRE_CFLAGS)
 
@@ -13,7 +18,12 @@ SS_COMMON_LIBS = $(INET_NTOP_LIB) $(LIBPCRE_LIBS)
 if !USE_SYSTEM_SHARED_LIB
 SS_COMMON_LIBS += $(top_builddir)/libbloom/libbloom.la \
                   $(top_builddir)/libipset/libipset.la \
-                  $(top_builddir)/libcork/libcork.la
+                  $(top_builddir)/libcork/libcork.la \
+                  $(top_builddir)/libudns/libudns.la \
+                  $(top_builddir)/libev/libev.la \
+                  $(top_builddir)/libsodium/src/libsodium/libsodium.la \
+                  $(top_builddir)/pcre/libpcre.la \
+                  -L$(top_builddir)/mbedtls/library
 else
 SS_COMMON_LIBS += -lbloom -lcork -lcorkipset
 endif
