remove pcre for it is provided in factory set

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 if USE_SYSTEM_SHARED_LIB
 SUBDIRS = src
 else
-SUBDIRS = libcork libipset libbloom libudns libev libsodium pcre mbedtls src
+SUBDIRS = libcork libipset libbloom libudns libev libsodium mbedtls src
 endif
 
 if ENABLE_DOCUMENTATION
